[gd_scene load_steps=12 format=3 uid="uid://c2qnn1xprr6w1"]

[ext_resource type="Script" path="res://SCRIPTS/card_configs/card_mis/card_ui.gd" id="1_s7kym"]
[ext_resource type="Texture2D" uid="uid://brnfoagmyesab" path="res://ART/cards/CardBack.png" id="2_riail"]
[ext_resource type="Script" path="res://SCRIPTS/card_configs/card_states/card_state_machine.gd" id="3_i1pnu"]
[ext_resource type="Script" path="res://SCRIPTS/card_configs/card_states/card_base_state.gd" id="4_q7twe"]
[ext_resource type="Script" path="res://SCRIPTS/card_configs/card_states/card_clicked_state.gd" id="5_yefxk"]
[ext_resource type="Script" path="res://SCRIPTS/card_configs/card_states/card_dragging_state.gd" id="6_s88v4"]
[ext_resource type="Script" path="res://SCRIPTS/card_configs/card_states/card_released_state.gd" id="7_h6xwo"]
[ext_resource type="Script" path="res://SCRIPTS/card_configs/card_states/card_aiming_state.gd" id="8_3pjxe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y41tc"]
bg_color = Color(0.431373, 0.858824, 1, 0.729412)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 0)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pah3g"]
bg_color = Color(0.59, 0.8975, 1, 0.729412)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1o7s"]
size = Vector2(100, 130)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(100, 130)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1180.0
offset_bottom = -590.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s7kym")

[node name="FeedbackColor" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y41tc")

[node name="DraggingColor" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -13.0
offset_right = 12.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pah3g")

[node name="Texture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_riail")
stretch_mode = 5

[node name="BlackPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.196078)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DropPointDetector" type="Area2D" parent="."]
visible = false
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(50, 65)
shape = SubResource("RectangleShape2D_m1o7s")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_i1pnu")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_q7twe")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_yefxk")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_s88v4")
state = 2

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_3pjxe")
state = 3

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_h6xwo")
state = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
